--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
             <artifactId>spark-streaming_2.10</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka_2.10</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 </project>
