--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,12 @@
             <artifactId>spark-streaming-kafka_2.10</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.3</version>
+        </dependency>
     </dependencies>
+
 </project>
