--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cgl.spark</groupId>
-    <artifactId>sparkTry</artifactId>
+    <artifactId>spark-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -33,5 +33,6 @@
             <version>0.9.3</version>
         </dependency>
     </dependencies>
+
 
 </project>
